added gui elements

--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -4,17 +4,10 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     Title="Chess">
 
-    <StackLayout>
+    <Grid ColumnDefinitions="Auto, Auto" Padding="10">
 
-        <!-- Top Input Area -->
-        <StackLayout Orientation="Horizontal" Margin="10">
-            <Entry x:Name="UserInput" Text="rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR" WidthRequest="300"/>
-            <Button Text="Set FEN" Clicked="orderInFenNotation"/>
-        </StackLayout>
-
-
-        <!-- Chess Grid Area -->
-        <Grid HorizontalOptions="Center" VerticalOptions="Center">
+        <!-- Left: Chess Board -->
+        <Grid Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center">
             <Grid WidthRequest="{Binding Source={x:Reference ChessGrid}, Path=HeightRequest}">
                 <Grid x:Name="ChessGrid"
                       RowSpacing="0"
@@ -24,10 +17,20 @@
                       HorizontalOptions="Fill"
                       HeightRequest="400"
                       WidthRequest="400">
-                    <!-- You will define 8x8 rows/cols in code or markup -->
+                    <!-- Board setup goes here -->
                 </Grid>
             </Grid>
         </Grid>
 
-    </StackLayout>
+        <!-- Right: Controls -->
+        <StackLayout Grid.Column="1" Margin="20,0" VerticalOptions="Center" Spacing="10">
+            <Entry x:Name="UserInput" 
+                   Text="rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR" 
+                   WidthRequest="200"/>
+            <Button Text="Set FEN" Clicked="orderInFenNotation"/>
+            <Button Text="Copy FEN Position" Clicked="copyPosition"/>
+            <Label x:Name="EvalLabel" Text="Eval: " FontSize="Medium"/>
+        </StackLayout>
+
+    </Grid>
 </ContentPage>
